syntax= "proto3"
package socialnetwork

service SocialNetwork {
  rpc follow (followRequest) returns (reqResponse);
  rpc unfollow (followRequest) returns (reqResponse);
  rpc list (user) returns (followersList);
}

message reqResponse{
    bool success = 1;
}

message followersList {
    repeated int followers = 1;
}

message user {
    int userId = 1;
}

message followRequest {
  int followee = 1;
  int follower = 2;
}

message status {
    string reply = 1;
}
